Added MTGO deck exporting tools

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+deck-exporter/decks/
+deck-exporter/decks.json
 
 # Created by https://www.gitignore.io/api/python,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,windows,visualstudiocode
@@ -108,7 +110,7 @@ dmypy.json
 .pyre/
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
