--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,5 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/python,windows,visualstudiocode
 scryfall/cards.json
 scryfall/decks.json
+scryfall/log.txt
+scryfall/decks_simple.json
